--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "project-3",
   "version": "1.0.0",
   "description": "",
-  "main": "categories.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node categories.js",
-    "dev": "nodemon categories.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
