--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.9",
     "node-pre-gyp": "^0.15.0"
   }
 }
